test_samples/invalid/missing_min.zarr/0/.zarray
{
    "chunks": [
        203,
        284
    ],
    "compressor": {
        "blocksize": 0,
        "clevel": 5,
        "cname": "lz4",
        "id": "blosc",
        "shuffle": 1
    },
    "dimension_separator": "/",
    "dtype": "|u1",
    "fill_value": 0,
    "filters": null,
    "order": "C",
    "shape": [
        1624,
        2272
    ],
    "zarr_format": 2
}